--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
     "mongoose-paginate": "^5.0.3",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "require-dir": "^1.2.0"
   },
