--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.6.0",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
+    "multer-google-storage": "^1.3.0",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
